--- a/IReader/AndroidManifest.xml
+++ b/IReader/AndroidManifest.xml
@@ -5,6 +5,9 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="7" />
+    
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+   
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -20,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ChannelActivity"></activity>
     </application>
 
 </manifest>
