--- a/IReader/AndroidManifest.xml
+++ b/IReader/AndroidManifest.xml
@@ -19,11 +19,14 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChannelActivity"></activity>
+        <activity 
+            android:name=".ChannelActivity" 
+            android:screenOrientation="portrait">
+           
+        </activity>
     </application>
 
 </manifest>
