--- a/IReader/AndroidManifest.xml
+++ b/IReader/AndroidManifest.xml
@@ -24,9 +24,11 @@
         </activity>
         <activity 
             android:name=".ChannelActivity" 
-            android:screenOrientation="portrait">
-           
+            android:screenOrientation="portrait">           
         </activity>
+        <activity android:name="SettingActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="AboutUsActivity" android:screenOrientation="portrait"></activity>
+        
     </application>
 
 </manifest>
